[gd_scene load_steps=9 format=3 uid="uid://nb3wxvil2x6j"]

[ext_resource type="Script" uid="uid://dpw5ogksace1y" path="res://Scripts/main.gd" id="1_kln2b"]
[ext_resource type="PackedScene" uid="uid://csgfe5ptvwgw5" path="res://Scenes/player.tscn" id="1_r150o"]
[ext_resource type="Script" uid="uid://7hbyrd18kmhk" path="res://Scripts/spawner.gd" id="3_kln2b"]
[ext_resource type="Texture2D" uid="uid://b6rrkmjg8vac1" path="res://Assets/Enviroment/Floorer.png" id="4_rgh2o"]

[sub_resource type="LabelSettings" id="LabelSettings_pbw6q"]
font_size = 20

[sub_resource type="LabelSettings" id="LabelSettings_v1gob"]
font_size = 20

[sub_resource type="LabelSettings" id="LabelSettings_jw32o"]
font_size = 60

[sub_resource type="LabelSettings" id="LabelSettings_rgh2o"]
font_size = 80

[node name="Main" type="Node2D"]
scale = Vector2(0.970332, 1)
script = ExtResource("1_kln2b")

[node name="Player" parent="." instance=ExtResource("1_r150o")]
position = Vector2(17.82, 0)

[node name="EnemySpawner" type="Node" parent="."]
script = ExtResource("3_kln2b")

[node name="SpawnTimer" type="Timer" parent="EnemySpawner"]

[node name="Enemies" type="Node2D" parent="."]

[node name="UI" type="CanvasLayer" parent="."]
process_mode = 3

[node name="ScoreLabel" type="Label" parent="UI"]
offset_left = 16.0
offset_top = 16.0
offset_right = 77.0
offset_bottom = 39.0
text = "Score: 0"
label_settings = SubResource("LabelSettings_pbw6q")
horizontal_alignment = 1
metadata/_edit_use_anchors_ = true

[node name="LevelLabel" type="Label" parent="UI"]
offset_left = -55.0
offset_top = 57.0
offset_right = 232.0
offset_bottom = 112.0
text = "Level: 1 XP: 0/5"
label_settings = SubResource("LabelSettings_v1gob")
horizontal_alignment = 1

[node name="HealthLabel" type="Label" parent="UI"]
offset_left = 16.0
offset_top = 104.0
offset_right = 154.0
offset_bottom = 159.0
text = "HP: 5/5"
label_settings = SubResource("LabelSettings_v1gob")

[node name="LevelUpOverlay" type="ColorRect" parent="UI"]
visible = false
z_index = -3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.4)

[node name="LevelUpPanel" type="Panel" parent="UI"]
visible = false
anchors_preset = -1
anchor_left = 0.4
anchor_top = 0.45
anchor_right = 0.45
anchor_bottom = 0.5
grow_horizontal = 2
grow_vertical = 2

[node name="Layout" type="VBoxContainer" parent="UI/LevelUpPanel"]
layout_mode = 0
offset_right = 212.0
offset_bottom = 93.0
alignment = 1

[node name="LevelUpLabel" type="Label" parent="UI/LevelUpPanel/Layout"]
layout_mode = 2
text = "\"LEVEL UP! Vyber upgrade:\""
label_settings = SubResource("LabelSettings_jw32o")

[node name="ButtonSpeed" type="Button" parent="UI/LevelUpPanel/Layout"]
layout_mode = 2
theme_override_font_sizes/font_size = 50
text = "\"Rychlost střelby +\""

[node name="ButtonDamage" type="Button" parent="UI/LevelUpPanel/Layout"]
layout_mode = 2
theme_override_font_sizes/font_size = 50
text = "\"Poškození střel +\""

[node name="GameOverPanel" type="Control" parent="UI"]
process_mode = 3
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="ColorRect" type="ColorRect" parent="UI/GameOverPanel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.321569, 0, 0.129412, 0.764706)

[node name="TitleLabel" type="Label" parent="UI/GameOverPanel"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -37.5
offset_top = -104.0
offset_right = 37.5
offset_bottom = -81.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 48
text = "You died?"
label_settings = SubResource("LabelSettings_rgh2o")
horizontal_alignment = 1
vertical_alignment = 1

[node name="RepeatButton" type="Button" parent="UI/GameOverPanel"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -33.5
offset_top = -15.5
offset_right = 33.5
offset_bottom = 15.5
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 37
text = "repeat?"

[node name="Sprite2D" type="Sprite2D" parent="."]
z_index = -5
position = Vector2(0, -1)
texture = ExtResource("4_rgh2o")
